Add methods for removing teacher from department